# shawns-nice-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
act-cli/: Dockerfile  README.md
aws/: README.md  __init__.py  cleanup-rules.py  config.toml  find-lambdas.py  get-ous.sh  logging.conf
aws/hap/: aws.py  base.py  logging.conf
aws/tests/: conftest.py  test_aws.py  test_base.py
github/: .gitignore  check-rule-removals.sh  get-teams.py  processed-accounts.txt  requirements.txt  run-guardrails-destroy-ignored-accounts.txt  run-guardrails-destroy.sh  update-compliance-acct.sh
hap-scripts/: README.md  get-argo.sh  get-grafana.sh
snowflakes/: domains.tfvars  parse-domains-from-tfvars.sh  requirements.txt  run-unittests.sh  update-environments.py
