[tool.poetry]
name = "shawns-nice-tools"
version = "0.1.0"
description = "random nice tooling to make life easier"
authors = ["shawn"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.26"
rich = "^12.0"
ruff = "^0.1"
tomli = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = ["E501"]
